<resources>
    <string name="app_name">Tic-Tac-Toe by Arslan</string>
    <string name="homeTile">Tic Tac Toe</string>
    <string name="PlayButton">play</string>
    <string name="PlayerSetupTitle">Enter Your Name</string>
    <string name="Label1">Player 1</string>
    <string name="Label2">Player2</string>
    <string name="submitButton">Submit Names</string>
    <string name="NameHint">Enter Your Name</string>
<string name="playAgainButton">Play Again</string>
    <string name="homeButton">Home</string>

</resources>